--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
     <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
     {% if site.github.is_project_page %}
-    <a href="{{ '/apk/liaoliaofang_v1.0.apk' }" class="btn">下载 apk</a>
+    <a href="{{ '/apk/liaoliaofang_v1.0.apk' }}" class="btn">下载 apk</a>
     {% endif %}
     {% if site.show_downloads %}
     <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
